[package]
name = "rply-codec"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.24.0", features = ["const_zeroed"] }
byteorder = "1.5.0"
flate2 = { version = "1.1.5", features = ["zlib-rs"] }
nohash-hasher = "0.2.0"
rmp = "0.8.14"
smallvec = "1.15.1"
thiserror = "2.0.17"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
zstd = "0.13.3"
